@@ -1,6 +1,7 @@
 2010-10-13 Ingo Renner  <ingo@typo3.org>
 
 	* Uncommented a test for aiff file meta data extractions, marked as incomplete though, currently not working...
+	* Added a configuration check status for the reports module
 
 2010-09-27 Ingo Renner  <ingo@typo3.org>
 
